# uefi-systemd-chainloader

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
scripts/: run.sh
src/: main.rs
